--- a/style.css
+++ b/style.css
@@ -104,3 +104,18 @@ body {
 	margin-top: 1em;
 	margin-bottom: 1em;
 }
+/* モーダルウィンドウの設定 */
+.modal_message	{
+	width: 300px;
+	margin-bottom: 10px;
+}
+dialog	{
+	padding: 10px;
+}
+button.btn_connect	{
+	display: block;
+	margin: 0 auto;
+	font-size: 1.5em;
+	font-weight: bold;
+	padding: 5px 10px;
+}
